# cs2-analyzer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BEFORE_AND_AFTER.md  CACHE_INTEGRATION_CODE.md  CLAUDE.md  CONTRIBUTING.md  COST_AUDIT.md  CUserslgleaAppDataLocalTempexpectations.txt  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCED_PARSER_ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  FIXES_DOCUMENTATION.md  FIX_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_QUICK_REFERENCE.py  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  PLAN.md  PROFESSIONAL_SYSTEM_GUIDE.md  Procfile  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  TACTICAL_REDESIGN_SUMMARY.md  TACTICAL_SYSTEM.md  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  sanity_check.py  tactical_demo.py  test_workflow.py  wsgi.py
.claude/: plan-economy-iq.md  plan-persistent-team-identity.md
.claude/commands/: add-endpoint.md  add-metric.md  check-logs.md  cleanup-debug.md  commit.md  deploy-hf.md  diff-behavior.md  discord-bot.md  fix-ci.md  format.md  grill-me.md  learn-mistake.md  plan-architect.md  plan-reset.md  plan-review.md  pr.md  prove-it-works.md  run-tests.md  security-audit.md  techdebt.md
.github/workflows/: ci.yml  deploy-hf-test.yml  deploy-hf.yml
deploy/: README.md
deploy/aws/: cloudformation.yaml  deploy.sh
deploy/azure/: containerapp.yaml  deploy.sh
deploy/gcp/: cloudbuild.yaml  cloudrun-service.yaml  deploy.sh
docs/: AUDIT_48H_2026-02-11.md  SERIALIZATION_CONTRACT.md
migrations/: 001_match_history.sql
scripts/: check_deployment.py  diagnostic.py  dump_demo_stats.py  endpoint_smoke_test.py  integration_test.py  pipeline_smoke_test.py  profile_parser.py  smoke_test.py  validate_contract.py  verify_pipeline.py  verify_signatures.py  worktree-setup.ps1
src/opensight/: __init__.py  __main__.py  analytics.py  api.py  api_routes_ai.py  api_routes_scouting.py  backend.py  cache.py  cli.py  coaching.py  coaching_tools.py  collaboration.py  combat.py  config.py  constants.py  custom_metrics.py  detection.py  discord_bot.py  economy.py  export.py  feedback.py  hltv.py  map_data.py  metrics.py  metrics_optimized.py  opponent.py  parallel.py  parser.py  patterns.py  playbook.py  player_performance_metrics.py  polars_ops.py  profiles.py  profiling.py  radar.py  realtime.py  replay.py  sentiment.py  server.py  sharecode.py  (+8 more)
src/opensight/ai/: __init__.py  antistrat_report.py  coaching.py  custom_metrics.py  data_prep.py  economy_engine.py  game_plan.py  llm_client.py  opponent.py  patterns.py  playbook.py  player_tracker.py  query_interface.py  scouting.py  self_review.py  sentiment.py  strat_engine.py  tactical.py  veto_optimizer.py
src/opensight/analysis/: __init__.py  analytics.py  compute_aim.py  compute_combat.py  compute_economy.py  compute_utility.py  detection.py  game_state.py  highlights.py  hltv_rating.py  metrics.py  metrics_optimized.py  models.py  persona.py  player_behavior.py  positioning.py  positioning_data.py  rotation.py  stats_extractor.py  tactical_analyzer.py  tactical_service.py
src/opensight/api/: __init__.py  routes_analysis.py  routes_auth.py  routes_export.py  routes_heatmap.py  routes_maps.py  routes_match.py  routes_misc.py  routes_paddle.py  routes_steam.py  routes_tracking.py  shared.py
src/opensight/auth/: __init__.py  jwt.py  middleware.py  passwords.py  steam.py  tiers.py
src/opensight/core/: __init__.py  config.py  constants.py  enhanced_parser.py  map_zones.py  parser.py  schemas.py  utils.py
src/opensight/domains/: __init__.py  combat.py  economy.py  synergy.py  utility.py
src/opensight/infra/: __init__.py  backend.py  cache.py  cache.py.backup  database.py  enhanced_cache_integration.py  job_store.py  parallel.py  polars_ops.py  watcher.py
src/opensight/integrations/: __init__.py  collaboration.py  faceit.py  feedback.py  hltv.py  profiles.py  sharecode.py
src/opensight/pipeline/: __init__.py  contract.py  orchestrator.py  store_events.py
src/opensight/scouting/: __init__.py  anti_strats.py  engine.py  models.py
src/opensight/scripts/: extract_maps.py
src/opensight/static/: index.html  landing.html
src/opensight/static/css/: map-zones.css  overview.css  player-heatmaps.css  stats-tables.css  your-match.css
src/opensight/static/js/: coach-ux.js  map-zones.js  overview.js  player-heatmaps.js  stats-tables.js  your-match.js
src/opensight/visualization/: __init__.py  export.py  exports.py  heatmaps.py  radar.py  replay.py  state_machine.py  trajectory.py
src/opensight/web/: __init__.py  app.py
src/opensight/web/templates/: about.html  analyze.html  base.html  decode.html  error.html  index.html  results.html  tactical.html  team.html
test_demos/: reassemble_demo.py
tests/: __init__.py  test_ai_connection.py  test_analytics.py  test_antistrat_report.py  test_api.py  test_auth.py  test_cache.py  test_clutch_diagnostic.py  test_combat.py  test_contract.py  test_data_prep.py  test_e2e_pipeline.py  test_economy.py  test_economy_engine.py  test_economy_iq.py  test_edge_cases.py  test_game_plan.py  test_golden_demo.py  test_golden_fixes.py  test_hltv_rating.py  test_integration.py  test_leetify_ground_truth.py  test_metrics.py  test_parser.py  test_player_tracker.py  test_polars_backend.py  test_query_interface.py  test_replay.py  test_scouting.py  test_sharecode.py  test_synergy.py  test_timeline.py  test_trade_diagnostic.py  test_ttd_cp_pipeline.py  test_utility.py  test_utility_attribution.py  test_veto_optimizer.py  test_watcher.py  test_your_match.py
