[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensight"
version = "0.1.0"
description = "Local CS2 analytics framework - professional-grade metrics without cloud dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenSight Contributors"}
]
keywords = ["cs2", "counter-strike", "analytics", "esports", "demo-parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: First Person Shooters",
]

dependencies = [
    "demoparser2>=0.9.0",
    "awpy>=2.0.0",
    "watchdog>=3.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
]

[project.optional-dependencies]
# Export format support
excel = ["openpyxl>=3.1.0"]
yaml = ["pyyaml>=6.0"]

# Web server for production
web = ["gunicorn>=21.0.0"]

# All export formats
export = [
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "gunicorn>=21.0.0",
]

# Full installation with all features
all = [
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "gunicorn>=21.0.0",
]

[project.scripts]
opensight = "opensight.cli:main"

[project.urls]
Homepage = "https://github.com/nukethe02/cs2-analyzer"
Repository = "https://github.com/nukethe02/cs2-analyzer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opensight = ["static/*", "static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
