[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensight"
version = "0.1.0"
description = "Local CS2 analytics framework - professional-grade metrics without cloud dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "OpenSight Contributors"}
]
keywords = ["cs2", "counter-strike", "analytics", "esports", "demo-parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: First Person Shooters",
]

dependencies = [
    # Core parsing
    "demoparser2>=0.9.0",
    "awpy>=2.0.0",
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # CLI
    "rich>=13.0.0",
    "typer>=0.9.0",
    "watchdog>=3.0.0",
    # FastAPI (Hugging Face deployment)
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    # Flask (Render.com deployment)
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
    # Database (FREE - SQLite with SQLAlchemy)
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
# Export format support
excel = ["openpyxl>=3.1.0"]
yaml = ["pyyaml>=6.0"]

# Web server for production
web = ["gunicorn>=21.0.0"]

# Discord bot integration
discord = [
    "discord.py>=2.3.0",
    "aiohttp>=3.9.0",
]

# All export formats
export = [
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",  # Required for fastapi.testclient
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "gunicorn>=21.0.0",
]

# Full installation with all features
all = [
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "gunicorn>=21.0.0",
]

[project.scripts]
opensight = "opensight.cli:main"
opensight-web = "opensight.server:main"

[project.urls]
Homepage = "https://github.com/nukethe02/cs2-analyzer"
Repository = "https://github.com/nukethe02/cs2-analyzer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opensight = ["static/*", "static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    "E501",  # Line too long - many template strings exceed limit
    "B008",  # Function call in default argument - standard typer pattern
    "B904",  # raise without from in except - acceptable for simple re-raises
    "E402",  # Import not at top - intentional for optional/lazy imports
    "B023",  # Loop variable capture - acceptable in some lambda cases
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false

# Per-module overrides for external dependencies
[[tool.mypy.overrides]]
module = [
    "demoparser2.*",
    "awpy.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

# Ignore modules with complex type issues
[[tool.mypy.overrides]]
module = [
    "opensight.ai.*",
    "opensight.player_performance_metrics",
    "opensight.visualization.*",
    "opensight.integrations.*",
    "opensight.analysis.*",
    "opensight.infra.*",
    "opensight.domains.*",
    "opensight.core.*",
    "opensight.discord_bot",
    "opensight.team_comparison",
    "opensight.video_analyzer",
    "opensight.api",
    "opensight.cli",
    "opensight",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
